--- a/Collections/Copypasta/4chan/4chan-Kopipe.mediawiki
+++ b/Collections/Copypasta/4chan/4chan-Kopipe.mediawiki
@@ -133,6 +133,13 @@ So, yeah, my mother saw me ejaculating till the last drop of semen, and in the l
 It was only when I was finally done and did a swift peek to see if I had done any mess on the floor, that I realized her presence.
 
 My heart went right down my stomach at her sight: she was just standing there, staring at me with dismay, then left the room without saying anything. I'm not lying if I admit that, then as now, I just wanted to die due to the huge embarrassment that followed. 
+== katy ==
+hi every1 im new!!!!!!! holds up spork my name is katy but u can call me t3h PeNgU1N oF d00m!!!!!!!! lol…as u can see im very random!!!! thats why i came here, 2 meet random ppl like me _… im 13 years old (im mature 4 my age tho!!) i like 2 watch invader zim w/ my girlfreind (im bi if u dont like it deal w/it) its our favorite tv show!!! bcuz its SOOOO random!!!! shes random 2 of course but i want 2 meet more random ppl =) like they say the more the merrier!!!! lol…neways i hope 2 make alot of freinds here so give me lots of commentses!!!!
+DOOOOOMMMM!!!!!!!!!!!!!!!! <--- me bein random again _^ hehe…toodles!!!!!
+
+love and waffles,
+
+t3h PeNgU1N oF d00m
 
 == lol internet ==
 Before Protests:
