Updated Ayashii World (mediawiki)

--- a/Encyclopedia/History/Sites/Anonymous-BBS/Ayashii-World.mediawiki
+++ b/Encyclopedia/History/Sites/Anonymous-BBS/Ayashii-World.mediawiki
@@ -1,4 +1,4 @@
-:*I'm copying all this crap from Japanese Wikipedia because it is unsourced so they might delete it someday. It is licensed GFDL.* - Shii
+:''I'm copying all this crap from Japanese Wikipedia, because it is unsourced, so they might delete it someday. It is licensed GFDL.'' - Shii
 
 We really need people to translate this to English. Ayashii World and Nanashi World are interesting forerunners of the modern [[4chan]] and [[Anonymous]].
 
