Updated Romeo san and Juliette (mediawiki)

--- a/Stories/Romeo-san-and-Juliette.mediawiki
+++ b/Stories/Romeo-san-and-Juliette.mediawiki
@@ -1,8 +1,7 @@
 Story taken from [[4chan]]'s [[/b/]] 
-Romeo-san, as he's called, has a loli that comes from an abusive house. It is in his best interest that he adopt Juliette (sleepy-chan)
+Romeo-san, as he's called, has taken in a little girl that ran away from an abusive house. He decides that it is in his best interest that he adopt Juliette (sleepy-chan)
 
-*'''Note''': If Anonymous has any information regarding this thread, let us know, as a post will stay on /b/ for about the same amount of time it takes Moot to cum on his Furry porn(about 8 seconds).
-*'''Epinote''': ''Romeo's AIM is fretton80 and he openly encourages anyone interested further to IM him.''
+*'''Note''': ''Romeo's AIM is fretton80 and he openly encourages anyone interested further to IM him.''
 
 ==Thread 1 (timestamp unavailable, est. between 10:00-11:00 October 13, 2007)==
 
