Updated WikiWorld 4chan Article (mediawiki)

--- a/WikiWorld-4chan-Article.mediawiki
+++ b/WikiWorld-4chan-Article.mediawiki
@@ -1,5 +1,7 @@
 {{Nsfw}}
-4chan users, Please see the [[Talk:4chan|Discussion Page]].
+
+[http://wikiworld.com/wiki/index.php?title=4chan&oldid=5249 Originally from WikiWorld], copied to the Bibliotheca Anonoma for archival.
+
 == ''''4chan'''' ==
 Japanese '''Yotsuba''' ("four leaves") '''Channel'''.
 Founded by '''moot'''; is a collection of English imageboards derived from the Japanese imageboard '''Futaba Channel''' (2chan).
