Updated Nevada tan (mediawiki)

--- a/Encyclopedia/Memes/Nevada-tan.mediawiki
+++ b/Encyclopedia/Memes/Nevada-tan.mediawiki
@@ -1,5 +1,7 @@
 This stuff is taken directly from another website dedicated to Nevada-tan as it was in June 2010.<ref>{{cite web |url=http://nevada.natural20.net/nevada.html |title=All About Nevada-tan |publisher=nevada.natural20.net}}</ref>
 
+[http://web.archive.org/web/20070210041553/http://iiichan.net/stuff/nevada/ iiichan Nevada-tan article]
+
 == History ==
 On Tuesday, 1 June 2004, at Sasebo Elementary School, an 11-year-old girl killed her classmate, then returned to her homeroom in bloodied clothes. The classmate, Satomi Miratai, died later that day. The killer is now in juvie, apparently until 2013.
 
