Updated 4chan Archive (mediawiki)

--- a/History/Sites/4chan/4chan-Archive.mediawiki
+++ b/History/Sites/4chan/4chan-Archive.mediawiki
@@ -1,3 +1,6 @@
+
+THIS IS OUTDATED,GO TO [archiveteam.org/index.php?title=4chan] FOR A MORE UPDATED LIST! 
+
 {{Infobox project
 | title = 4chan
 | image = 4chan.png
