Updated Yotsuba (mediawiki)

--- a/Encyclopedia/Anime/Series/Yotsuba.mediawiki
+++ b/Encyclopedia/Anime/Series/Yotsuba.mediawiki
@@ -1,4 +1,4 @@
-The [[Moonspeak|Japanese]] name (meaning "four leaves") of not only [[4chan]], but a myriad of people, fictional and otherwise. The favorite around [[4chan]] is Yotsuba Koiwai from Azuma Kiyohiko's manga ''Yotsubato''. She is a green-haired loli with 4 short pigtails, who is used as one of 4chan's primary mascots (the other being [[moot|m<3<3t]]).
+The [[Moonspeak|Japanese]] name (meaning "four leaves") of not only [[4chan]], but a myriad of people, fictional and otherwise. The favorite around [[4chan]] is Yotsuba Koiwai from Azuma Kiyohiko's manga ''Yotsubato''. She is a green-haired loli with 4 short pigtails, who is used as one of 4chan's primary mascots (the other being [[moot]]).
 
 A substantial amount of fanart of Yotsuba has been produced for 4chan's error and ban-notification pages<ref>{{cite web |url=http://www.4chan.org/error/ |title=403 - Forbidden |publisher=4chan.org}}</ref> (the latter usually also including m<3<3t and/or [[Anonymous]]), with a picture being chosen at random each time one of these pages is accessed.
 
